--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -5,6 +5,7 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
 {% set region = path_utils.zoneToRegion(properties["zone"]) %}
+{% set myzones = path_utils.zones(properties["zone"]) %}
 {% set zone = properties["zone"] %}
 {% set machineType = properties["machineType"] %}
 {% set bootDiskType = properties["bootDiskType"] %}
@@ -105,6 +106,7 @@ resources:
           - 0.0.0.0/0
         targetTags:
           - bastion
+          - {{ myzones }}
       - name: {{ deployment }}-allow-http
         description: Allow HTTP/HTTPS from anywhere
         allowed:
