--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -5,7 +5,7 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
 {% set region = path_utils.zoneToRegion(properties["zone"]) %}
-{% set myzones = path_utils.zones(properties["zone"]) %}
+
 {% set zone = properties["zone"] %}
 {% set machineType = properties["machineType"] %}
 {% set bootDiskType = properties["bootDiskType"] %}
@@ -19,6 +19,11 @@
 {% set boomiPassword = properties["boomiPassword"] %}
 {% set boomiAccountID = properties["boomiAccountID"] %}
 {% set helmGITRepoURL = properties["helmGITRepoURL"] %}
+
+{% set myzones = [] %}
+{% for myzone in properties["zone"] %}
+{% set _ = myzones.append(path_utils.zonePath(myzone)) %}
+{% endfor %}
 
 resources:
 
