--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -25,6 +25,9 @@
 
 resources:
 
+- name: {{ deployment }}-static-ip
+  type: static_address
+
 - name: {{ deployment }}-bastion-sa
   type: iam.v1.serviceAccount
   properties:
@@ -152,3 +155,72 @@ resources:
         capacityGb: 1024
     networks:
       - network: {{ properties["gkeClusterNetwork"] }}
+
+- name: {{ deployment }}-gke-cluster
+  type: gke.py
+  properties:
+    clusterLocationType: {{ enableRegionalGKECluster }}
+    region: {{ region }}
+    zone: {{ zone }}
+    cluster:
+      name: {{ deployment }}-gke-cluster
+      description: {{ deployment }} k8s Cluster
+      network: {{ properties["gkeClusterNetwork"] }}
+      subnetwork: {{ privateSubnetwork }}
+      initialClusterVersion: 1.17.12-gke.1501
+      addonsConfig:
+        httpLoadBalancing:
+          disabled: false
+      nodePools:
+        - name: {{ deployment }}-gke-pool
+          {% if properties["enableRegionalGKECluster"] == True %}
+          initialNodeCount: 1
+          {% else %}
+          initialNodeCount: 3
+          {% endif %}
+          version: 1.17.12-gke.1501
+          config:
+            machineType: {{ gkeMachineType }}
+            diskSizeGb: {{ diskSizeGb }}
+            serviceAccount: $(ref.{{ deployment }}-gke-sa.email)
+            oauthScopes:
+              - https://www.googleapis.com/auth/cloud-platform
+            {% if properties["enableRegionalGKECluster"] == True %}
+            workloadMetadataConfig:
+              nodeMetadata: SECURE
+            {% endif %}
+          autoscaling:
+            enabled: True
+            {% if properties["enableRegionalGKECluster"] == True %}
+            minNodeCount: 1
+            {% else %}
+            minNodeCount: 3
+            {% endif %}
+            maxNodeCount: {{ maxNodePerZone }}
+          management:
+            autoUpgrade: true
+            autoRepair: true
+      loggingService: logging.googleapis.com/kubernetes
+      monitoringService: monitoring.googleapis.com/kubernetes
+      privateClusterConfig:
+        enablePrivateNodes: false
+        enablePrivateEndpoint: False
+        masterIpv4CidrBlock: 172.16.0.0/28
+      ipAllocationPolicy:
+        useIpAliases: True
+        clusterIpv4CidrBlock: 10.1.0.0/16
+        servicesIpv4CidrBlock: 192.168.192.0/24
+      masterAuth:
+        clientCertificateConfig:
+          issueClientCertificate: false
+      workloadIdentityConfig:
+        workloadPool: {{ project }}.svc.id.goog
+      networkPolicy:
+        enabled: true
+      maintenancePolicy:
+        window:
+          recurringWindow:
+            window:
+              startTime: "2020-11-01T07:00:25Z"
+              endTime: "2021-11-01T07:00:25Z"
+            recurrence: "FREQ=MONTHLY;BYSETPOS=1;BYDAY=SA,SU"
