--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -26,7 +26,7 @@
 resources:
 
 - name: {{ deployment }}-static-ip
-  type: static_address
+  type: static_address.py
 
 - name: {{ deployment }}-bastion-sa
   type: iam.v1.serviceAccount
