--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -168,7 +168,7 @@ resources:
     boomiUserEmailID: {{ boomiUserEmailID }}
     boomiPassword: {{ boomiPassword }}
     boomiAccountID: {{ boomiAccountID }}
-    network: $(ref.{{ deployment }}-network.vpcName)
+    network: {{ properties["gkeClusterNetwork"] }}
     CLUSTER_NAME: $(ref.{{ deployment }}-gke-cluster.name)
     ipaddress: $(ref.{{ deployment }}-cloud-filestore.fileShareIp)
     ingressStaticIpName: $(ref.{{ deployment }}-static-ip.staticIpName)
