--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -241,3 +241,44 @@ resources:
               startTime: "2020-11-01T07:00:25Z"
               endTime: "2021-11-01T07:00:25Z"
             recurrence: "FREQ=MONTHLY;BYSETPOS=1;BYDAY=SA,SU"
+
+- name: {{ deployment }}-bastion-instance
+  type: bastion_instance.py
+  properties:
+    network: {{ network }}
+    publicSubnet: {{ publicSubnetwork }}
+    region: {{ region }}
+    machineType: {{ machineType }}
+    machineImage: centos-cloud/global/images/family/centos-7
+    minSize: 1
+    maxSize: 2
+    serviceAccountEmail: $(ref.{{ deployment }}-bastion-sa.email)
+    serviceAccountScopes:
+      - https://www.googleapis.com/auth/compute
+      - https://www.googleapis.com/auth/devstorage.read_only
+      - https://www.googleapis.com/auth/logging.write
+      - https://www.googleapis.com/auth/monitoring
+    tags:
+      items:
+        - bastion
+    startupScript: |
+      #!/bin/bash
+      #### Log the execution to a file ####
+      exec 3>&1 4>&2
+      trap 'exec 2>&4 1>&3' 0 1 2 3 RETURN
+      exec 1>/var/log/configure-bastion.log 2>&1
+
+      set -x
+      #install kubectl
+      curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+      chmod +x ./kubectl
+      sudo mv ./kubectl /usr/local/bin/kubectl
+      kubectl version --client
+
+      #mount filestore
+      sudo yum -y update && sudo yum -y install nfs-utils
+      sudo mkdir -p /mnt/boominfs
+      sudo mount $(ref.{{ deployment }}-cloud-filestore.fileShareIp):/boomifileshare /mnt/boominfs
+
+      export HOME='whoami'
+      export KUBECONFIG=$HOME/.kube/config
