--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -199,8 +199,8 @@ resources:
         masterIpv4CidrBlock: 172.16.0.0/28
       ipAllocationPolicy:
         useIpAliases: True
-        clusterIpv4CidrBlock: 10.1.0.0/16
-        servicesIpv4CidrBlock: 192.168.192.0/24
+        clusterIpv4CidrBlock: ''
+        servicesIpv4CidrBlock: ''
       masterAuth:
         clientCertificateConfig:
           issueClientCertificate: false
