--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -194,8 +194,8 @@ resources:
       loggingService: logging.googleapis.com/kubernetes
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
-        enablePrivateNodes: false
-        enablePrivateEndpoint: False
+        enablePrivateNodes: true
+        enablePrivateEndpoint: true
         masterIpv4CidrBlock: 172.16.0.0/28
       ipAllocationPolicy:
         useIpAliases: True
