--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -217,7 +217,7 @@ resources:
         enablePrivateEndpoint: true
         masterIpv4CidrBlock: 192.168.16.0/28
       ipAllocationPolicy:
-        useIpAliases: True
+        useIpAliases: true
       masterAuth:
         clientCertificateConfig:
           issueClientCertificate: false
