--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -44,7 +44,7 @@ resources:
           - "serviceAccount:$(ref.{{ deployment }}-bastion-sa.email)"
           - "serviceAccount:$(ref.{{ deployment }}-gke-sa.email)"
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudbuild.gserviceaccount.com' }}
-      - roles/container.developer
+      - role: roles/container.developer
         members:
           - {{ 'serviceAccount:' + env['project_number'] + '@cloudbuild.gserviceaccount.com' }}
       - role: roles/compute.instanceAdmin
