gke private cluster

--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -73,6 +73,10 @@ resources:
         serviceName: gkeconnect.googleapis.com
       - name: computeApi
         serviceName: compute.googleapis.com
+      - name: privateApi
+        serviceName: private.googleapis.com
+      - name: restrictedApi
+        serviceName: restricted.googleapis.com
 
 - name: {{ deployment }}-network
   type: network.py
