--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -217,7 +217,7 @@ resources:
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
         enablePrivateNodes: true
-        enablePrivateEndpoint: true
+        enablePrivateEndpoint: false
         masterIpv4CidrBlock: 192.168.16.0/28
       ipAllocationPolicy:
         useIpAliases: true
