--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -198,7 +198,7 @@ resources:
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
         enablePrivateNodes: true
-        enablePrivateEndpoint: true
+        enablePrivateEndpoint: false
         masterIpv4CidrBlock: 172.16.0.0/28
       ipAllocationPolicy:
         useIpAliases: True
