--- a/templates/cloudbuild/cloudbuild.jinja
+++ b/templates/cloudbuild/cloudbuild.jinja
@@ -14,21 +14,12 @@ resources:
   properties:
     timeout: 120s
     steps:
-    # Configure a kubectl workspace for this project
-    - name: gcr.io/cloud-builders/kubectl
-      args:
-        - cluster-info
-      env:
-        - CLOUDSDK_COMPUTE_REGION={{ region }}
-        - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
-        - KUBECONFIG=/workspace/.kube/config
-        
     - id: git_clone
       name: 'gcr.io/cloud-builders/git'
       args:
-        - clone
-        - {{ properties["helmGITRepoURL"] }}
-        - quick_start
+      - clone
+      - {{ properties["helmGITRepoURL"] }}
+      - quick_start
 
     - id: 'build_image'
       name: 'gcr.io/cloud-builders/docker'
@@ -50,6 +41,17 @@ resources:
         - HELM_REPO_URL=https://kubernetes-charts.storage.googleapis.com
       waitFor: [build_image]
 
+    - id: helm_list
+      name: 'gcr.io/$PROJECT_ID/helm:latest'
+      args: 
+        - repo
+        - list
+      env:
+        - CLOUDSDK_COMPUTE_REGION={{ region }}
+        - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
+        - KUBECONFIG=/workspace/.kube/config
+      waitFor: [helm_repo_update]
+
     - id: helm_nfs_deployment
       name: 'gcr.io/$PROJECT_ID/helm:latest'
       args: 
@@ -64,7 +66,7 @@ resources:
         - CLOUDSDK_CONTAINER_CLUSTER={{ CLUSTER_NAME }}
         - KUBECONFIG=/workspace/.kube/config
         - HELM_REPO_NAME=stable/nfs-client-provisioner
-      waitFor: [helm_repo_update]
+      waitFor: [helm_list]
 
     - id: helm_boomi_deployment
       name: 'gcr.io/$PROJECT_ID/helm:latest'
