--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -216,7 +216,7 @@ resources:
       loggingService: logging.googleapis.com/kubernetes
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
-        enablePrivateNodes: false
+        enablePrivateNodes: true
         enablePrivateEndpoint: false
         masterIpv4CidrBlock: 192.168.16.0/28
       ipAllocationPolicy:
