--- a/boomi_molecule_existing_vpc.jinja
+++ b/boomi_molecule_existing_vpc.jinja
@@ -197,7 +197,7 @@ resources:
       loggingService: logging.googleapis.com/kubernetes
       monitoringService: monitoring.googleapis.com/kubernetes
       privateClusterConfig:
-        enablePrivateNodes: false
+        enablePrivateNodes: true
         enablePrivateEndpoint: false
         masterIpv4CidrBlock: 172.16.0.0/28
       ipAllocationPolicy:
