--- a/boomi_molecule.jinja
+++ b/boomi_molecule.jinja
@@ -219,6 +219,9 @@ resources:
         enablePrivateNodes: true
         enablePrivateEndpoint: false
         masterIpv4CidrBlock: 192.168.16.0/28
+      masterAuthorizedNetworksConfig: 
+        enabled: false
+        cidrBlocks: []
       ipAllocationPolicy:
         useIpAliases: true
       masterAuth:
